--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/structural-survey-of-anguillas-main-jetty-by-major-andy-nixon-mbe">Structural Survey of Anguilla&rsquo;s Main Jetty by Major Andy Nixon MBE</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/200799.fr">Accord avec EDF : un moment important pour nos deux pays</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/247944.it">L’Italia agli Invictus Games</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/governor-of-the-cayman-islands-invites-nominations-for-honours--2">Governor of the Cayman Islands invites nominations for honours</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--8">Advice for British nationals in Chennai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/173244.lt">Lietuva perėmė Europos Sąjungos vairą</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-expatriates-its-your-vote-dont-lose-it--3">British expatriates - “It’s your vote, don’t lose it”</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/changes-to-the-uk-visa-application-process--2">Changes to the UK visa application process in Romania</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/job-vacancy-deputy-consul-generaldeputy-director-for-ukti-milan--2">Job vacancy: Deputy Consul General/Deputy Director for UKTI Milan</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/208807.es">Expositores británicos opinan sobre Smart Cities en Barcelona</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/ukrwanda-cycling-a-formula-for-success--2">UK/Rwanda cycling – a formula for success</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/192303.es">Listado de universidades, colegios, y distribuidores de material didáctico participantes en la feria</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/belizean-military-top-brass-visit-united-kingdom">Belizean military top brass visit United Kingdom</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/212818.es">El Gobierno británico anuncia un plan para eliminar la burocracia</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-supports-freedom-of-expression-in-cameroon">UK supports Freedom of Expression in Cameroon</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/233481.az">Britaniya XİN Rauf Mirqədirovun həbsindən narahatdı</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/175060.zh-tw">英國貿易文化辦事處在台成立20週年，致力推動台英雙邊關係</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/296094.es">La Embajada Británica busca socio empresarial para Tea Shop en el Pabellón Británico</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/286926.zh">英國更換簽證語言測驗機構</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
