--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -443,16 +443,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.derby.gov.uk" class="govuk-link">Derby City Council</a></li>
-      <li><a href="http://www.nfdc.gov.uk" class="govuk-link">New Forest District Council</a></li>
-      <li><a href="http://www.walsall.gov.uk/" class="govuk-link">Walsall Metropolitan Borough Council</a></li>
-      <li><a href="https://getintoteaching.education.gov.uk/" class="govuk-link">Get Into Teaching</a></li>
-      <li><a href="http://www.darlington.gov.uk" class="govuk-link">Darlington Borough Council</a></li>
-      <li><a href="http://www.caerphilly.gov.uk" class="govuk-link">Caerphilly County Borough Council</a></li>
-      <li><a href="http://www.carrickfergus.org" class="govuk-link">Carrickfergus Borough Council</a></li>
-      <li><a href="https://www.gov.uk/alerts" class="govuk-link">Emergency Alerts</a></li>
-      <li><a href="http://www.powys.gov.uk" class="govuk-link">Powys County Council</a></li>
+      <li><a href="http://www.ballymena.gov.uk/" class="govuk-link">Ballymena Borough Council</a></li>
+      <li><a href="http://www.downdc.gov.uk" class="govuk-link">Down District Council</a></li>
+      <li><a href="http://www.eden.gov.uk/" class="govuk-link">Eden District Council</a></li>
+      <li><a href="http://www.chorley.gov.uk" class="govuk-link">Chorley Borough Council</a></li>
       <li><a href="http://www.liverpool.gov.uk" class="govuk-link">Liverpool City Council</a></li>
+      <li><a href="http://www.caerphilly.gov.uk" class="govuk-link">Caerphilly County Borough Council</a></li>
+      <li><a href="http://www.dover.gov.uk" class="govuk-link">Dover District Council</a></li>
+      <li><a href="http://www.newark-sherwooddc.gov.uk" class="govuk-link">Newark and Sherwood District Council</a></li>
+      <li><a href="http://www.hertsmere.gov.uk/" class="govuk-link">Hertsmere Borough Council</a></li>
+      <li><a href="http://www.derby.gov.uk" class="govuk-link">Derby City Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
