--- a/apps/account-api/api.html
+++ b/apps/account-api/api.html
@@ -364,7 +364,7 @@
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/account-api/commit/3293d2087143e3f68c02355856a35c83f4c7db56">3 Jun 2021</a>
+  Last updated: <a href="https://github.com/alphagov/account-api/commit/e47ccbcfebb75c391e22ec3b2b15227dc3c0fdba">11 Jun 2021</a>
 </div>
 
   <h1 class="page-title">account-api: API documentation</h1>
@@ -381,17 +381,7 @@ management. This API is not for other government services.</p>
 <li><a href="#session-identifier">Session identifier</a></li>
 </ul>
 </li>
-<li>
-<a href="#requirements-for-api-consumers">Requirements for API consumers</a>
-<ul>
-<li><a href="#request-custom-headers">Request custom headers</a></li>
-<li><a href="#response-custom-headers">Response custom headers</a></li>
-<li><a href="#update-the-users-session-if-a-new-session-identifier-is-returned">Update the user's session if a new session identifier is returned</a></li>
-<li><a href="#end-the-users-session-if-an-endpoint-returns-a-401-unauthenticated">End the user's session if an endpoint returns a <code>401: Unauthenticated</code></a></li>
-<li><a href="#ensure-responses-are-not-cached">Ensure responses are not cached</a></li>
-</ul>
-</li>
-<li><a href="#example-api-usage">Example API usage</a></li>
+<li><a href="#using-this-api">Using this API</a></li>
 <li>
 <a href="#api-endpoints">API endpoints</a>
 <ul>
@@ -404,10 +394,10 @@ management. This API is not for other government services.</p>
 <li><a href="#get-apiattributesnames"><code>GET /api/attributes/names</code></a></li>
 <li><a href="#get-apitransition-checker-email-subscription"><code>GET /api/transition-checker-email-subscription</code></a></li>
 <li><a href="#post-apitransition-checker-email-subscription"><code>POST /api/transition-checker-email-subscription</code></a></li>
-<li><a href="#get-apisaved_pages"><code>GET /api/saved_pages</code></a></li>
-<li><a href="#put-apisaved_pagespage_path"><code>PUT /api/saved_pages/:page_path</code></a></li>
-<li><a href="#delete-apisaved_pagespage_path"><code>DELETE /api/saved_pages/:page_path</code></a></li>
-<li><a href="#get-apisaved_pagespage_path"><code>GET /api/saved_pages/:page_path</code></a></li>
+<li><a href="#get-apisaved-pages"><code>GET /api/saved-pages</code></a></li>
+<li><a href="#get-apisaved-pagespage_path"><code>GET /api/saved-pages/:page_path</code></a></li>
+<li><a href="#put-apisaved-pagespage_path"><code>PUT /api/saved-pages/:page_path</code></a></li>
+<li><a href="#delete-apisaved-pagespage_path"><code>DELETE /api/saved-pages/:page_path</code></a></li>
 </ul>
 </li>
 <li>
@@ -425,136 +415,33 @@ management. This API is not for other government services.</p>
 <p>The service which authenticates a user. Currently we use the <a href="https://github.com/alphagov/govuk-account-manager-prototype/">GOV.UK account manager prototype</a>.</p>
 <h3 id="session-identifier">Session identifier</h3>
 <p>An opaque token which identifies a user and provides access to their attributes.</p>
-<h2 id="requirements-for-api-consumers">Requirements for API consumers</h2>
-<p>We manage user sessions in frontend apps by using custom headers, which tie into logic in our Content Delivery Network (CDN). This section describes what you have to do to manage those custom headers correctly.</p>
-<h3 id="request-custom-headers">Request custom headers</h3>
-<p>The request custom header is <code>GOVUK-Account-Session</code>.</p>
-<p>This custom header is set by our CDN to the value of the user's session cookie. This is the user's session identifier.</p>
-<p>See the <a href="https://github.com/alphagov/govuk-cdn-config/blob/2ade45759be947a28b1225aee085311430bcbecf/vcl_templates/www.vcl.erb#L339-L340"><code>govuk-cdn-config</code> VCL</a> for more information.</p>
-<h3 id="response-custom-headers">Response custom headers</h3>
-<p>The response custom headers are:</p>
-<ul>
-<li><code>GOVUK-Account-Session</code></li>
-<li><code>GOVUK-Account-End-Session</code></li>
-</ul>
-<p><code>GOVUK-Account-Session</code> is sent to our CDN to update the user's session cookie.</p>
-<p><code>GOVUK-Account-End-Session</code> is sent to our CDN to delete the user's session cookie.</p>
-<p>See the <a href="https://github.com/alphagov/govuk-cdn-config/blob/2ade45759be947a28b1225aee085311430bcbecf/vcl_templates/www.vcl.erb#L442-L455"><code>govuk-cdn-config</code> VCL</a> for more information.</p>
-<p>We do not have a CDN when developing locally. To enable local development with Accounts, we store the session identifier
-in a cookie called <code>govuk_account_session</code>, with <code>domain: dev.gov.uk</code>, when running in development mode.</p>
-<p>We may later provide a gem implementing this behaviour.</p>
-<h3 id="update-the-users-session-if-a-new-session-identifier-is-returned">Update the user's session if a new session identifier is returned</h3>
-<p>Some of these endpoints return a session identifier in the <code>govuk_account_session</code> JSON response field. If this happens, you must update the user's session identifier.</p>
-<ol>
-<li>
-<p>Set the <code>GOVUK-Account-Session</code> response custom header:</p>
-<pre lang="ruby"><code>response.headers["GOVUK-Account-Session"] = "&lt;govuk_account_session value&gt;"
-</code></pre>
-</li>
-<li>
-<p>Update the development cookie when running locally:</p>
-<pre lang="ruby"><code>if Rails.env.development?
-  cookies["govuk_account_session"] = {
-    value: "&lt;govuk_account_session value&gt;",
-    domain: "dev.gov.uk",
-  }
-end
-</code></pre>
-</li>
-</ol>
-<h3 id="end-the-users-session-if-an-endpoint-returns-a-401-unauthenticated">End the user's session if an endpoint returns a <code>401: Unauthenticated</code>
-</h3>
-<p>If an endpoint returns a <code>401: Unauthenticated</code> response, then the user must no longer be considered logged in.</p>
-<ol>
-<li>
-<p>Set the <code>GOVUK-Account-End-Session</code> response header:</p>
-<pre lang="ruby"><code>response.headers["GOVUK-Account-End-Session"] = "1"
-</code></pre>
-</li>
-<li>
-<p>Expire the development cookie when running locally:</p>
-<pre lang="ruby"><code>if Rails.env.development?
-  cookies["govuk_account_session"] = {
-    value: "",
-    domain: "dev.gov.uk",
-    expires: 1.second.ago,
-  }
-end
-</code></pre>
-</li>
-</ol>
-<h3 id="ensure-responses-are-not-cached">Ensure responses are not cached</h3>
-<p>Any user-visible response which involves calling this API must return appropriate response headers to either forbid caching, or specific that the response depends on the user.</p>
-<p>To forbid caching:</p>
-<pre lang="ruby"><code>response.headers["Cache-Control"] = "no-store"
-</code></pre>
-<p>To specify that the response depends on the user:</p>
-<pre lang="ruby"><code>response.headers["Vary"] = [response.headers["Vary"], "GOVUK-Account-Session"].compact.join(", ")
-</code></pre>
-<h2 id="example-api-usage">Example API usage</h2>
-<p>This is an example of updating an attribute for the current user.</p>
-<p>The <code>update</code> method is the controller action.  The <code>disable_cache</code>,
-<code>fetch_session_identifier</code>, <code>set_session_identifier</code>, and <code>logout!</code>
-methods would be re-used by other actions which call this API.</p>
-<pre lang="ruby"><code>before_action :disable_cache, only: %i[update]
-before_action :fetch_session_identifier, only: %i[update]
+<h2 id="using-this-api">Using this API</h2>
+<p>You should use this API in combination with the <a href="https://github.com/alphagov/govuk_personalisation">govuk_personalisation</a> gem, like so:</p>
+<pre lang="ruby"><code>class YourRailsController &lt; ApplicationController
+  # include the concern in your controller
+  include GovukPersonalisation::AccountConcern
 
-def update
-  head :unauthorised and return unless @session_identifier
+  def show
+    # call the API with gds-api-adapters, the @govuk_account_session is provided by the concern
+    result = GdsApi.account_api.get_attributes(
+      attributes: %w[some user attributes],
+      govuk_account_session: @govuk_account_session,
+    )
 
-  api_response = GdsApi.account_api.set_attributes(
-    govuk_account_session: @session_identifier,
-    attributes: { example_attribute: params[:attribute_value] },
-  ).to_h
+    # set up the response header and update @govuk_account_session
+    set_account_session_header(result["govuk_account_session"])
 
-  set_session_identifier api_response["govuk_account_session"]
-rescue GdsApi::HTTPUnauthorized
-  logout!
-  render plain: "you have been logged out"
-end
-
-private
-
-def disable_cache
-  response.headers["Cache-Control"] = "no-store"
-end
-
-def fetch_session_identifier
-  @session_identifier =
-    if request.headers["HTTP_GOVUK_ACCOUNT_SESSION"]
-      request.headers["HTTP_GOVUK_ACCOUNT_SESSION"]
-    elsif Rails.env.development?
-      cookies["govuk_account_session"]
-    end
-end
-
-def set_session_identifier(session_identifier)
-  return unless session_identifier
-
-  response.headers["GOVUK-Account-Session"] = @session_identifier
-
-  if Rails.env.development?
-    cookies["govuk_account_session"] = {
-      value: @session_identifier,
-      domain: "dev.gov.uk",
-    }
-  end
-end
-
-def logout!
-  @session_identifier = nil
-
-  response.headers["GOVUK-Account-End-Session"] = "1"
-
-  if Rails.env.development?
-    cookies["govuk_account_session"] = {
-      value: "",
-      domain: "dev.gov.uk",
-      expires: 1.second.ago,
-    }
+    # do something in your view with the result
+    @attributes = result["values"]
+  rescue GdsApi::HTTPUnauthorized
+    # the user's session is invalid
+    logout!
+  rescue GdsApi::HTTPForbidden
+    # the user needs to reauthenticate, the required level of authentication is in the response body
   end
 end
 </code></pre>
+<p>The <a href="https://github.com/alphagov/govuk_personalisation">govuk_personalisation</a> gem handles setting the <code>GOVUK-Account-Session</code> and <code>Vary</code> response headers for your app, ensuring that responses are not cached.  In local development there is a cookie instead of a custom header, which the gem also handles for you.</p>
 <h2 id="api-endpoints">API endpoints</h2>
 <h3 id="get-apioauth2sign-in"><code>GET /api/oauth2/sign-in</code></h3>
 <p>Generates an OAuth sign in URL.</p>
@@ -1031,7 +918,7 @@ end
     "govuk_account_session": "YWNjZXNzLXRva2Vu.cmVmcmVzaC10b2tlbg=="
 }
 </code></pre>
-<h3 id="get-apisaved_pages"><code>GET /api/saved_pages</code></h3>
+<h3 id="get-apisaved-pages"><code>GET /api/saved-pages</code></h3>
 <p>Returns all a user's saved pages</p>
 <h4 id="request-headers">Request headers</h4>
 <ul>
@@ -1064,7 +951,7 @@ end
 </ul>
 <h4 id="example-request-response">Example request / response</h4>
 <p>Request (with gds-api-adapters):</p>
-<pre lang="ruby"><code>GdsApi.saved_page_api.get_saved_pages(
+<pre lang="ruby"><code>GdsApi.account_api.get_saved_pages(
     govuk_account_session: "session-identifier",
 )
 </code></pre>
@@ -1091,7 +978,64 @@ end
   ]
 }
 </code></pre>
-<h3 id="put-apisaved_pagespage_path"><code>PUT /api/saved_pages/:page_path</code></h3>
+<h3 id="get-apisaved-pagespage_path"><code>GET /api/saved-pages/:page_path</code></h3>
+<p>Query if a specific path has been saved by the user</p>
+<h4 id="request-headers">Request headers</h4>
+<ul>
+<li>
+<code>GOVUK-Account-Session</code>
+<ul>
+<li>the user's session identifier</li>
+</ul>
+</li>
+</ul>
+<h4 id="request-parameters">Request parameters</h4>
+<ul>
+<li>
+<code>page_path</code>
+<ul>
+<li>the path on GOV.UK to save</li>
+</ul>
+</li>
+</ul>
+<h4 id="json-response-fields">JSON response fields</h4>
+<ul>
+<li>
+<code>govuk_account_session</code> <em>(optional)</em>
+<ul>
+<li>a new session identifier</li>
+</ul>
+</li>
+<li>
+<code>saved_page</code>
+<ul>
+<li>an object containing the page path of the successfully queried page</li>
+</ul>
+</li>
+</ul>
+<h4 id="response-codes">Response codes</h4>
+<ul>
+<li>404 cannot find a page with the provided path</li>
+<li>401 if the session identifier is invalid</li>
+<li>200 otherwise</li>
+</ul>
+<h4 id="example-request-response">Example request / response</h4>
+<p>Request (with gds-api-adapters):</p>
+<pre lang="ruby"><code>GdsApi.account_api.get_saved_page(
+    page_path: "/guidance/bar",
+    govuk_account_session: "session-identifier",
+)
+</code></pre>
+<pre lang="json"><code>{
+    "govuk_account_session": "YWNjZXNzLXRva2Vu.cmVmcmVzaC10b2tlbg==",
+    "saved_page": {
+      "page_path": "/guidance/bar",
+      "content_id": "96ae61d6-c2a1-48cb-8e67-da9d105ae381",
+      "title": "Guidance for Bar-related Activities"
+    },
+}
+</code></pre>
+<h3 id="put-apisaved-pagespage_path"><code>PUT /api/saved-pages/:page_path</code></h3>
 <p>Upsert a saved page in a user's account</p>
 <h4 id="request-headers">Request headers</h4>
 <ul>
@@ -1128,15 +1072,15 @@ end
 </ul>
 <h4 id="response-codes">Response codes</h4>
 <ul>
-<li>401 if the session identifier is invalid</li>
-<li>404 if the page does not exist (not present in the content store)</li>
-<li>410 if the page has been removed (the latest edition is in the "gone" or "redirect" state)</li>
 <li>422 if the page could not be saved (see <a href="#page-cannot-be-saved">error: page cannot be saved</a>)</li>
+<li>410 if the page has been removed (the latest edition is in the "gone" or "redirect" state)</li>
+<li>404 if the page does not exist (not present in the content store)</li>
+<li>401 if the session identifier is invalid</li>
 <li>200 otherwise</li>
 </ul>
 <h4 id="example-request-response">Example request / response</h4>
 <p>Request (with gds-api-adapters):</p>
-<pre lang="ruby"><code>GdsApi.saved_page_api.save_page(
+<pre lang="ruby"><code>GdsApi.account_api.save_page(
     page_path: "/guidance/foo",
     govuk_account_session: "session-identifier",
 )
@@ -1150,7 +1094,7 @@ end
     },
 }
 </code></pre>
-<h3 id="delete-apisaved_pagespage_path"><code>DELETE /api/saved_pages/:page_path</code></h3>
+<h3 id="delete-apisaved-pagespage_path"><code>DELETE /api/saved-pages/:page_path</code></h3>
 <p>Remove a saved page from a user's account</p>
 <h4 id="request-headers">Request headers</h4>
 <ul>
@@ -1166,81 +1110,24 @@ end
 <li>
 <code>page_path</code>
 <ul>
-<li>An escaped URL safe string that identifies the path of a saved page.</li>
+<li>the path on GOV.UK to save</li>
 </ul>
 </li>
 </ul>
 <h4 id="response-codes">Response codes</h4>
 <ul>
-<li>401 if the session identifier is invalid</li>
 <li>404 cannot find a page with the provided path</li>
+<li>401 if the session identifier is invalid</li>
 <li>204 successfully deleted</li>
 </ul>
 <h4 id="example-request-response">Example request / response</h4>
 <p>Request (with gds-api-adapters):</p>
-<pre lang="ruby"><code>GdsApi.saved_page_api.delete_saved_page(
+<pre lang="ruby"><code>GdsApi.account_api.delete_saved_page(
     page_path: "/guidance/bar",
     govuk_account_session: "session-identifier",
 )
 </code></pre>
 <p>Response is status code only.</p>
-<h3 id="get-apisaved_pagespage_path"><code>GET /api/saved_pages/:page_path</code></h3>
-<p>Query if a specific path has been saved by the user</p>
-<h4 id="request-headers">Request headers</h4>
-<ul>
-<li>
-<code>GOVUK-Account-Session</code>
-<ul>
-<li>the user's session identifier</li>
-</ul>
-</li>
-</ul>
-<h4 id="request-parameters">Request parameters</h4>
-<ul>
-<li>
-<code>page_path</code>
-<ul>
-<li>An escaped URL safe string that identifies the path of a saved page.</li>
-</ul>
-</li>
-</ul>
-<h4 id="json-response-fields">JSON response fields</h4>
-<ul>
-<li>
-<code>govuk_account_session</code> <em>(optional)</em>
-<ul>
-<li>a new session identifier</li>
-</ul>
-</li>
-<li>
-<code>saved_page</code>
-<ul>
-<li>an object containing the page path of the successfully queried page</li>
-</ul>
-</li>
-</ul>
-<h4 id="response-codes">Response codes</h4>
-<ul>
-<li>401 if the session identifier is invalid</li>
-<li>404 cannot find a page with the provided path</li>
-<li>200 otherwise</li>
-</ul>
-<h4 id="example-request-response">Example request / response</h4>
-<p>Request (with gds-api-adapters):</p>
-<pre lang="ruby"><code>GdsApi.saved_page_api.get_saved_page(
-    page_path: "/guidance/bar",
-    govuk_account_session: "session-identifier",
-)
-</code></pre>
-<pre lang="json"><code>{
-    "govuk_account_session": "YWNjZXNzLXRva2Vu.cmVmcmVzaC10b2tlbg==",
-    "saved_page": {
-      "page_path": "/guidance/bar",
-      "content_id": "96ae61d6-c2a1-48cb-8e67-da9d105ae381",
-      "title": "Guidance for Bar-related Activities"
-    },
-}
-</code></pre>
 <h2 id="api-errors">API errors</h2>
 <p>API errors are returned as an <a href="https://tools.ietf.org/html/rfc7807">RFC 7807</a> "Problem Detail" object, in
 the following format:</p>
